Add: Added header and nav section on mobile
# Conflicts:
#	README.md

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -26,3 +26,11 @@ $color-gray-100: #f8f5ff;
 $color-feedback-error: #c44d4d;
 $color-feedback-alert: #fff284;
 $color-feedback-sucess: #37693f;
+
+// Black and white
+$color-white: #fff;
+$color-black: #000;
+
+// Breakpoints
+$breakpoint-tablet: 768px;
+$breakpoint-desktop: 1024px;
