--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,2 +1,23 @@
 // FONT IMPORT
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  // This defines what 1rem is
+  font-size: 62.5%;
+}
+
+body {
+  box-sizing: border-box;
+}
+
+.hidden {
+  display: none;
+}
