Fix: Fixed import _reset.scss problem | Added: Better animations and font

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,7 @@
+@import "base/reset";
 @import "abstracts/variables";
 @import "base/typography";
 @import "components/header";
 @import "layout/navigation";
 @import "base/base";
+@import "base/animations";
