--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
 .header {
   display: flex;
   align-items: center;
@@ -57,14 +65,11 @@
   overflow-y: auto;
   z-index: 99;
   transition: opacity 0.3s ease, transform 0.3s ease;
-  opacity: 1;
+  opacity: 0;
   font-size: 2rem;
+  pointer-events: none;
   display: flex;
   flex-direction: column;
-}
-.navigation.is-active {
-  opacity: 1;
-  transform: translateX(1);
 }
 .navigation__list {
   list-style: none;
@@ -99,18 +104,19 @@
   color: #fff;
 }
 
+.navigation--open {
+  animation: moveInLeftToRight 0.5s cubic-bezier(0.25, 0.8, 0.25, 1) forwards;
+  pointer-events: auto;
+}
+
+.navigation--close {
+  animation: moveOutRightToLeft 0.5s cubic-bezier(0.25, 0.8, 0.25, 1) forwards;
+}
+
 a {
   display: block;
   color: inherit;
   text-decoration: none;
-}
-
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
 }
 
 html {
@@ -119,10 +125,57 @@ html {
 
 body {
   box-sizing: border-box;
+  font-family: "Quicksand";
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 1.5;
+  color: #312845;
+  box-sizing: border-box;
 }
 
 .hidden {
   display: none;
+}
+
+@keyframes moveInTop {
+  0% {
+    opacity: 0; /* Starts invisible */
+    transform: translateY(-100px); /* Starts at the top and begins falling */
+  }
+  100% {
+    opacity: 1; /* Fully visible */
+    transform: translate(0); /* Final position */
+  }
+}
+@keyframes moveOutBottom {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-100px);
+  }
+}
+@keyframes moveInLeftToRight {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes moveOutRightToLeft {
+  0% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
