--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,14 +1,7 @@
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
-}
-
-body {
-  font-family: "Quicksand", sans-serif;
-  font-weight: 400;
-  font-size: 10px;
-  line-height: 1.5;
-  color: $color-gray-700;
-  box-sizing: border-box;
 }
