--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -10,8 +10,9 @@
   overflow-y: auto;
   z-index: 99;
   transition: opacity 0.3s ease, transform 0.3s ease;
-  opacity: 1;
+  opacity: 0;
   font-size: $font-mobile-body-16;
+  pointer-events: none;
   display: flex;
   flex-direction: column;
 
@@ -51,6 +52,16 @@
     }
   }
 }
+
+.navigation--open {
+  animation: moveInLeftToRight 0.5s cubic-bezier(0.25, 0.8, 0.25, 1) forwards;
+  pointer-events: auto;
+}
+
+.navigation--close {
+  animation: moveOutRightToLeft 0.5s cubic-bezier(0.25, 0.8, 0.25, 1) forwards;
+}
+
 a {
   display: block;
   color: inherit;
