--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,31 @@
   padding: 1.6rem 2.4rem;
   position: relative;
 }
+.header__right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .header__logo {
   width: 12.7rem;
   height: 3.4rem;
 }
 
+@media (min-width: 1024px) {
+  .header {
+    height: 9.6rem;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .header__left {
+    width: 25%;
+  }
+  .header__right {
+    width: 50%;
+  }
+}
 .menu {
   width: 4rem;
   height: 6rem;
@@ -114,11 +134,41 @@
 }
 
 a {
-  display: block;
+  display: inline-block;
   color: inherit;
   text-decoration: none;
 }
 
+@media (min-width: 1024px) {
+  .menu {
+    display: none;
+  }
+  .navigation {
+    position: static;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+    width: 75%;
+    flex-direction: row;
+    pointer-events: all;
+  }
+  .navigation__list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 70%;
+  }
+  .navigation__item {
+    border: 0;
+    width: auto;
+  }
+  .navigation__btn {
+    width: auto;
+  }
+}
 html {
   font-size: 62.5%;
 }
