Add: Added html for the homepage section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,6 @@
 @import "base/typography";
 @import "components/header";
 @import "base/animations";
-
 @import "layout/navigation";
-
+@import "pages/home";
 @import "base/base";
