--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,104 @@
   box-sizing: inherit;
 }
 
+.homepage {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.homepage__picture {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 19.5rem;
+  background-image: linear-gradient(to left, #ff816b, #fff);
+}
+.homepage__picture__circle--orange {
+  position: relative;
+  width: 16.3rem;
+  height: 16.3rem;
+  background-color: #ff816b;
+  border-radius: 200rem;
+  z-index: 999;
+  top: 1rem;
+}
+.homepage__picture__dog {
+  width: 18.6rem;
+  height: 19.4rem;
+  z-index: 1000;
+  position: absolute;
+}
+.homepage__text-and-buttons {
+  width: 100%;
+  padding: 0 2.4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.homepage__text-and-buttons__heart-pawn {
+  width: 1.8rem;
+  height: 1.8rem;
+  margin-top: 1.6rem;
+}
+.homepage__text-and-buttons__main-title {
+  margin-top: 0.8rem;
+  font-size: 3.2rem;
+  width: 100%;
+}
+.homepage__text-and-buttons__sub-title {
+  margin-top: 1.6rem;
+  width: 80%;
+  font-size: 2rem;
+  font-weight: 300;
+}
+.homepage__text-and-buttons__adoption-btn {
+  display: inline-block;
+  width: 100%;
+  height: 5.4rem;
+  margin-top: 2.4rem;
+  text-align: center;
+  color: #fff;
+  background-color: #ff816b;
+  border-radius: 0.8rem;
+  border: none;
+  cursor: pointer;
+  font-weight: 800;
+}
+.homepage__text-and-buttons__donation-btn {
+  display: inline-block;
+  width: 100%;
+  height: 5.4rem;
+  margin-top: 1.6rem;
+  text-align: center;
+  color: #ff816b;
+  background-color: #fff;
+  border-radius: 0.8rem;
+  border: 1px solid #ff816b;
+  cursor: pointer;
+  font-weight: 800;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  box-sizing: border-box;
+  font-family: "Quicksand";
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 1.5;
+  color: #312845;
+  box-sizing: border-box;
+}
+
+.hidden {
+  display: none;
+}
+
 .header {
   display: flex;
   align-items: center;
@@ -123,7 +221,7 @@
   height: calc(100vh - 100%);
   background-color: #fff;
   overflow-y: auto;
-  z-index: 99;
+  z-index: 1001;
   transition: opacity 0.3s ease, transform 0.3s ease;
   opacity: 0;
   font-size: 2rem;
@@ -237,23 +335,6 @@ a {
     opacity: 1;
     transform: scale(1.2);
   }
-}
-html {
-  font-size: 62.5%;
-}
-
-body {
-  box-sizing: border-box;
-  font-family: "Quicksand";
-  font-weight: 400;
-  font-size: 10px;
-  line-height: 1.5;
-  color: #312845;
-  box-sizing: border-box;
-}
-
-.hidden {
-  display: none;
 }
 
 /*# sourceMappingURL=style.css.map */
