--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,9 @@
+@import "base/typography";
 @import "base/reset";
 @import "abstracts/variables";
-@import "base/typography";
+@import "abstracts/mixins";
+@import "pages/home";
+@import "base/base";
 @import "components/header";
 @import "base/animations";
 @import "layout/navigation";
-@import "pages/home";
-@import "base/base";
