--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -56,7 +56,7 @@
 
     &__sub-title {
       margin-top: 1.6rem;
-      width: 80%;
+      width: 87%;
       font-size: $font-mobile-body-16;
       font-weight: 300;
     }
@@ -66,6 +66,7 @@
       width: 100%;
       height: 5.4rem;
       margin-top: 2.4rem;
+      font-size: $font-mobile-body-16;
       @include defaultBtnPrimaryColorBackground;
     }
 
@@ -74,6 +75,7 @@
       width: 100%;
       height: 5.4rem;
       margin-top: 1.6rem;
+      font-size: $font-mobile-body-16;
       @include defaultBtnWhiteBackground;
     }
   }
