--- a/css/style.css
+++ b/css/style.css
@@ -7,88 +7,6 @@
   box-sizing: inherit;
 }
 
-.homepage {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.homepage__picture {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 19.5rem;
-  background-image: linear-gradient(to left, #ff816b, #fff);
-}
-.homepage__picture__circle--orange {
-  position: relative;
-  width: 16.3rem;
-  height: 16.3rem;
-  background-color: #ff816b;
-  border-radius: 200rem;
-  z-index: 999;
-  top: 1rem;
-}
-.homepage__picture__dog {
-  width: 18.6rem;
-  height: 19.4rem;
-  z-index: 1000;
-  position: absolute;
-}
-.homepage__text-and-buttons {
-  width: 100%;
-  padding: 0 2.4rem;
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-}
-.homepage__text-and-buttons__heart-pawn {
-  width: 1.8rem;
-  height: 1.8rem;
-  margin-top: 1.6rem;
-}
-.homepage__text-and-buttons__main-title {
-  margin-top: 0.8rem;
-  font-size: 3.2rem;
-  width: 100%;
-}
-.homepage__text-and-buttons__sub-title {
-  margin-top: 1.6rem;
-  width: 87%;
-  font-size: 2rem;
-  font-weight: 300;
-}
-.homepage__text-and-buttons__adoption-btn {
-  display: inline-block;
-  width: 100%;
-  height: 5.4rem;
-  margin-top: 2.4rem;
-  font-size: 2rem;
-  text-align: center;
-  color: #fff;
-  background-color: #ff816b;
-  border-radius: 0.8rem;
-  border: none;
-  cursor: pointer;
-  font-weight: 500;
-}
-.homepage__text-and-buttons__donation-btn {
-  display: inline-block;
-  width: 100%;
-  height: 5.4rem;
-  margin-top: 1.6rem;
-  font-size: 2rem;
-  text-align: center;
-  color: #ff816b;
-  background-color: #fff;
-  border-radius: 0.8rem;
-  border: 1px solid #ff816b;
-  cursor: pointer;
-  font-weight: 500;
-}
-
 html {
   font-size: 62.5%;
 }
@@ -105,72 +23,6 @@ body {
 
 .hidden {
   display: none;
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 6.3rem;
-  width: 100%;
-  padding: 1.6rem 2.4rem;
-  position: relative;
-}
-.header__right {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.header__logo {
-  width: 16.7rem;
-  height: 7.4rem;
-}
-
-@media (min-width: 1024px) {
-  .header {
-    height: 9.6rem;
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .header__left {
-    width: 25%;
-  }
-  .header__right {
-    width: 50%;
-  }
-}
-.menu {
-  width: 4rem;
-  height: 6rem;
-  background-color: #fff;
-  border-radius: 1rem;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  cursor: pointer;
-}
-.menu .line {
-  width: 100%;
-  height: 0.3rem;
-  background-color: #ff816b;
-  transition: 400ms ease;
-}
-.menu .line-2 {
-  margin: 0.5rem 0;
-}
-.menu #checkbox:checked ~ .line-2 {
-  opacity: 0;
-}
-.menu #checkbox:checked ~ .line-1 {
-  rotate: 225deg;
-  translate: 0 0.8rem;
-}
-.menu #checkbox:checked ~ .line-3 {
-  rotate: -225deg;
-  translate: 0 -0.8rem;
 }
 
 @keyframes moveInTop {
@@ -257,10 +109,10 @@ body {
   font-size: 2.4rem;
   text-align: center;
   text-decoration: none;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.4s ease-in;
 }
 .navigation__btn:hover {
-  background-color: #ff816b;
+  background-color: rgb(255, 85.5810810811, 56);
   color: #fff;
 }
 
@@ -336,6 +188,241 @@ a {
   .navigation__link:hover::after {
     opacity: 1;
     transform: scale(1.2);
+  }
+}
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 6.3rem;
+  width: 100%;
+  padding: 1.6rem 2.4rem;
+  position: relative;
+}
+.header__right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header__logo {
+  width: 16.7rem;
+  height: 7.4rem;
+}
+
+@media (min-width: 1024px) {
+  .header {
+    height: 9.6rem;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
+  }
+  .header__left {
+    width: 25%;
+  }
+  .header__right {
+    width: 50%;
+  }
+}
+.menu {
+  width: 4rem;
+  height: 6rem;
+  background-color: #fff;
+  border-radius: 1rem;
+  padding: 1rem;
+  cursor: pointer;
+}
+.menu .line {
+  width: 100%;
+  height: 0.3rem;
+  background-color: #ff816b;
+  transition: 400ms ease;
+}
+.menu .line-2 {
+  margin: 0.5rem 0;
+}
+.menu #checkbox:checked ~ .line-2 {
+  opacity: 0;
+}
+.menu #checkbox:checked ~ .line-1 {
+  rotate: 225deg;
+  translate: 0 0.8rem;
+}
+.menu #checkbox:checked ~ .line-3 {
+  rotate: -225deg;
+  translate: 0 -0.8rem;
+}
+
+.homepage {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.homepage__picture {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 19.5rem;
+  background-image: linear-gradient(to left, #ff816b, #fff);
+  position: relative;
+}
+.homepage__picture__circle--orange {
+  position: relative;
+  width: 16.3rem;
+  height: 16.3rem;
+  background-color: #ff816b;
+  border-radius: 200rem;
+  z-index: 999;
+  top: 1rem;
+}
+.homepage__picture__dog {
+  width: 18.6rem;
+  height: 19.4rem;
+  z-index: 1000;
+  position: absolute;
+}
+.homepage__buttons {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+  margin-top: 1.6rem;
+}
+.homepage__text-and-buttons {
+  width: 100%;
+  padding: 0 2.4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.homepage__text-and-buttons__heart-pawn {
+  width: 1.8rem;
+  height: 1.8rem;
+  margin-top: 1.6rem;
+}
+.homepage__text-and-buttons__main-title {
+  margin-top: 0.8rem;
+  font-size: 3.2rem;
+  width: 100%;
+}
+.homepage__text-and-buttons__sub-title {
+  margin-top: 1.6rem;
+  width: 87%;
+  font-size: 2rem;
+  font-weight: 300;
+}
+.homepage__text-and-buttons__adoption-btn {
+  display: inline-block;
+  width: 100%;
+  height: 5.4rem;
+  margin-top: 2.4rem;
+  font-size: 2rem;
+  text-align: center;
+  color: #fff;
+  background-color: #ff816b;
+  border-radius: 0.8rem;
+  border: none;
+  cursor: pointer;
+  font-weight: 500;
+  transition: all 0.4s ease-in;
+}
+.homepage__text-and-buttons__adoption-btn:hover {
+  background-color: rgb(255, 85.5810810811, 56);
+}
+.homepage__text-and-buttons__donation-btn {
+  display: inline-block;
+  width: 100%;
+  height: 5.4rem;
+  margin-top: 1.6rem;
+  font-size: 2rem;
+  text-align: center;
+  color: #ff816b;
+  background-color: transparent;
+  border-radius: 0.8rem;
+  border: 1px solid #ff816b;
+  cursor: pointer;
+  font-weight: 500;
+  transition: all 0.4s ease-in;
+}
+.homepage__text-and-buttons__donation-btn:hover {
+  background-color: rgb(255, 85.5810810811, 56);
+  color: #fff;
+}
+
+@media (min-width: 1024px) {
+  .homepage {
+    height: 63.1rem;
+    flex-direction: row;
+    background-image: linear-gradient(
+      to left,
+      rgb(255, 172.4189189189, 158),
+      #fff
+    );
+    overflow: hidden;
+    padding-left: 21.6rem;
+    padding-right: 8.2rem;
+  }
+  .homepage__picture {
+    background-image: none;
+    order: 1;
+    height: 100%;
+    width: 56.9rem;
+  }
+  .homepage__picture__circle--orange {
+    width: 55.6rem;
+    height: 55.6rem;
+    top: 12rem;
+  }
+  .homepage__picture__dog {
+    width: 45.5rem;
+    height: 56.9rem;
+    top: 9rem;
+  }
+  .homepage__buttons {
+    flex-direction: row;
+    max-width: 54rem;
+    gap: 3rem;
+  }
+  .homepage__text-and-buttons {
+    order: 0;
+    margin-right: 2.4rem;
+    max-width: 60.2rem;
+  }
+  .homepage__text-and-buttons__heart-pawn {
+    width: 2.4rem;
+    height: 2.4rem;
+  }
+  .homepage__text-and-buttons__main-title {
+    font-size: 4rem;
+    max-width: 60.4rem;
+  }
+  .homepage__text-and-buttons__sub-title {
+    font-size: 2.4rem;
+    max-width: 41.9rem;
+  }
+  .homepage__text-and-buttons__adoption-btn {
+    display: inline-block;
+    width: 24.5rem;
+    height: 6rem;
+    margin-top: 0;
+    font-size: 2.4rem;
+  }
+  .homepage__text-and-buttons__donation-btn {
+    display: inline-block;
+    width: 24.5rem;
+    height: 6rem;
+    margin-top: 0;
+    font-size: 2.4rem;
+  }
+}
+@media (min-width: 1600px) {
+  .homepage {
+    gap: 10rem;
   }
 }
 
