--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -44,10 +44,10 @@
     font-size: $font-mobile-body-18;
     text-align: center;
     text-decoration: none;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.4s ease-in;
 
     &:hover {
-      background-color: $color-primary-brand;
+      background-color: darken($color-primary-brand, 10%);
       color: $color-white;
     }
   }
