--- a/css/style.css
+++ b/css/style.css
@@ -132,13 +132,10 @@ a {
 }
 
 @media (min-width: 1024px) {
-  .menu {
-    display: none;
-  }
   .navigation {
     position: static;
-    flex: 1;
     display: flex;
+    flex: 1;
     justify-content: center;
     align-items: center;
     opacity: 1;
@@ -149,7 +146,6 @@ a {
     font-weight: 400;
   }
   .navigation__list {
-    display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
@@ -190,70 +186,6 @@ a {
     transform: scale(1.2);
   }
 }
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 6.3rem;
-  width: 100%;
-  padding: 1.6rem 2.4rem;
-  position: relative;
-}
-.header__right {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.header__logo {
-  width: 16.7rem;
-  height: 7.4rem;
-}
-
-@media (min-width: 1024px) {
-  .header {
-    height: 9.6rem;
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    overflow: hidden;
-  }
-  .header__left {
-    width: 25%;
-  }
-  .header__right {
-    width: 50%;
-  }
-}
-.menu {
-  width: 4rem;
-  height: 6rem;
-  background-color: #fff;
-  border-radius: 1rem;
-  padding: 1rem;
-  cursor: pointer;
-}
-.menu .line {
-  width: 100%;
-  height: 0.3rem;
-  background-color: #ff816b;
-  transition: 400ms ease;
-}
-.menu .line-2 {
-  margin: 0.5rem 0;
-}
-.menu #checkbox:checked ~ .line-2 {
-  opacity: 0;
-}
-.menu #checkbox:checked ~ .line-1 {
-  rotate: 225deg;
-  translate: 0 0.8rem;
-}
-.menu #checkbox:checked ~ .line-3 {
-  rotate: -225deg;
-  translate: 0 -0.8rem;
-}
-
 .homepage {
   width: 100%;
   display: flex;
@@ -358,11 +290,7 @@ a {
   .homepage {
     height: 63.1rem;
     flex-direction: row;
-    background-image: linear-gradient(
-      to left,
-      rgb(255, 172.4189189189, 158),
-      #fff
-    );
+    background-image: linear-gradient(to left, rgb(255, 172.4189189189, 158), #fff);
     overflow: hidden;
     padding-left: 21.6rem;
     padding-right: 8.2rem;
@@ -423,6 +351,78 @@ a {
 @media (min-width: 1600px) {
   .homepage {
     gap: 10rem;
+  }
+}
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 6.3rem;
+  width: 100%;
+  padding: 1.6rem 2.4rem;
+  position: relative;
+}
+.header__right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header__logo {
+  width: 16.7rem;
+  height: 7.4rem;
+}
+
+@media (min-width: 1024px) {
+  .header {
+    height: 9.6rem;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
+  }
+  .header__left {
+    width: 25%;
+  }
+  .header__right {
+    width: 50%;
+  }
+}
+.menu {
+  width: 4rem;
+  height: 6rem;
+  background-color: #fff;
+  border-radius: 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  cursor: pointer;
+}
+.menu .line {
+  width: 100%;
+  height: 0.3rem;
+  background-color: #ff816b;
+  transition: 400ms ease;
+}
+.menu .line-2 {
+  margin: 0.5rem 0;
+}
+.menu #checkbox:checked ~ .line-2 {
+  opacity: 0;
+}
+.menu #checkbox:checked ~ .line-1 {
+  rotate: 225deg;
+  translate: 0 0.8rem;
+}
+.menu #checkbox:checked ~ .line-3 {
+  rotate: -225deg;
+  translate: 0 -0.8rem;
+}
+
+@media (min-width: 1024px) {
+  .menu {
+    display: none;
   }
 }
 
