--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,4 +6,6 @@
 @import "base/animations";
 @import "layout/navigation";
 @import "pages/home";
+@import "pages/featuredPets";
+@import "components/petCardSlider";
 @import "components/header";
