--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -68,7 +68,7 @@
       margin-top: 1.6rem;
       width: 87%;
       font-size: $font-mobile-body-16;
-      font-weight: 300;
+      font-weight: $font-weight-light;
     }
 
     &__adoption-btn {
