--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,3 +28,12 @@ $font-mobile-body-18: 2.4rem;
 $font-mobile-body-16: 2rem;
 $font-mobile-body-14: 1.8rem;
 $font-mobile-body-12: 1.6rem;
+
+// Font weight
+$font-weight-light: 300;
+$font-weight-regular: 400;
+$font-weight-medium: 500;
+$font-weight-semi-bold: 600;
+$font-weight-bold: 700;
+$font-weight-ultra-bold: 800;
+$font-weight-heavy: 900;
