--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,6 +28,7 @@ $font-mobile-body-18: 2.4rem;
 $font-mobile-body-16: 2rem;
 $font-mobile-body-14: 1.8rem;
 $font-mobile-body-12: 1.6rem;
+$font-mobile-body-10: 1.4rem;
 
 // Font weight
 $font-weight-light: 300;
