--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,5 +7,6 @@
 @import "layout/navigation";
 @import "pages/home";
 @import "pages/featuredPets";
+@import "components/petCard";
 @import "components/petCardSlider";
 @import "components/header";
