--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,17 @@ body {
   box-sizing: border-box;
   font-family: "Quicksand";
   font-weight: 400;
-  font-size: 10px;
   line-height: 1.5;
   color: #312845;
-  box-sizing: border-box;
   margin-bottom: 200rem;
   scroll-behavior: smooth;
+  padding-top: 6.3rem;
+}
+
+body.no-scroll {
+  position: fixed;
+  width: 100%;
+  overflow: hidden;
 }
 
 .hidden {
@@ -497,7 +502,12 @@ a {
   height: 6.3rem;
   width: 100%;
   padding: 1.6rem 2.4rem;
-  position: relative;
+  position: fixed;
+  z-index: 1001;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
 }
 .header__right {
   display: flex;
