--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,12 +10,17 @@ body {
   box-sizing: border-box;
   font-family: "Quicksand";
   font-weight: 400;
-  font-size: 10px;
   line-height: 1.5;
   color: $color-gray-700;
-  box-sizing: border-box;
   margin-bottom: 200rem;
   scroll-behavior: smooth;
+  padding-top: 6.3rem;
+}
+
+body.no-scroll {
+  position: fixed;
+  width: 100%;
+  overflow: hidden;
 }
 
 .hidden {
