--- a/sass/components/_petCard.scss
+++ b/sass/components/_petCard.scss
@@ -1,18 +1,16 @@
 .card {
+  @include flex-column;
   margin-top: 3.8rem;
   list-style: none;
   width: 21rem;
   height: 29.3rem;
   border-radius: 0.8rem;
-  display: flex;
-  flex-direction: column;
   border-radius: 8px;
   border: 0.5px solid $color-gray-300;
   overflow: hidden;
 
   &__naming {
-    display: flex;
-    flex-direction: row;
+    @include flex-row;
     align-items: center;
     justify-content: space-between;
     padding: 1rem 0.8rem;
@@ -30,16 +28,14 @@
   }
 
   &__description {
-    display: flex;
+    @include flex-row;
     align-items: center;
-    flex-direction: row;
     flex-wrap: wrap;
     padding: 1rem 0.8rem;
     gap: 1rem;
 
     &__age-gender-size {
-      display: flex;
-      flex-direction: row;
+      @include flex-row;
       gap: 3.5rem;
     }
 
@@ -67,8 +63,7 @@
     }
 
     &__pin-location {
-      display: flex;
-      flex-direction: row;
+      @include flex-row;
       width: 19.4rem;
       gap: 0.8rem;
     }
