--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,4 +1,5 @@
 .navigation {
+  @include flex-column;
   position: absolute;
   font-weight: $font-weight-light;
   color: $color-secondary-dark;
@@ -13,17 +14,14 @@
   opacity: 0;
   font-size: $font-mobile-body-16;
   pointer-events: none;
-  display: flex;
-  flex-direction: column;
 
   &__list {
+    @include flex-column;
     list-style: none;
     padding: 0;
     margin: 0;
     width: 100%;
     height: auto;
-    display: flex;
-    flex-direction: column;
   }
 
   &__item {
@@ -72,11 +70,9 @@ a {
 
 @media (min-width: $breakpoint-desktop) {
   .navigation {
+    @include flex-align-justify-center;
     position: static;
-    display: flex;
     flex: 1;
-    justify-content: center;
-    align-items: center;
     opacity: 1;
     width: 75%;
     flex-direction: row;
