--- a/sass/components/_petCard.scss
+++ b/sass/components/_petCard.scss
@@ -2,17 +2,31 @@
   @include flex-column;
   margin-top: 3.8rem;
   list-style: none;
-  width: 21rem;
+  width: clamp(18rem, 75vw, 21rem);
   height: 29.3rem;
   border-radius: 0.8rem;
   border-radius: 8px;
-  border: 0.5px solid $color-gray-300;
   overflow: hidden;
+  scroll-snap-align: start;
+  flex: 0 0 auto;
+
+  &__img {
+    width: 100%;
+    height: 75rem;
+    overflow: hidden;
+
+    img {
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+      object-fit: cover;
+    }
+  }
 
   &__naming {
     @include flex-row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 1rem 0.8rem;
 
     &--name {
@@ -36,7 +50,7 @@
 
     &__age-gender-size {
       @include flex-row;
-      gap: 3.5rem;
+      gap: 3rem;
     }
 
     &--icon-pet {
