--- a/sass/components/_petCardSlider.scss
+++ b/sass/components/_petCardSlider.scss
@@ -1,6 +1,29 @@
+.carousel-wrapper {
+  max-width: 100vw;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  -webkit-overflow-scrolling: touch;
+  padding-bottom: 1rem;
+
+  scrollbar-width: none; // Firefox
+
+  &::-webkit-scrollbar {
+    display: none; // Chrome, Safari
+  }
+}
+
 .carousel {
-  width: 100%;
   display: flex;
-  align-items: row;
-  justify-content: center;
+  gap: 2rem;
+  padding: 2rem 1rem;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  overflow-x: auto;
+  overflow-y: hidden;
+  flex-wrap: nowrap;
+
+  li {
+    scroll-snap-align: start;
+    flex: 0 0 auto;
+  }
 }
