--- a/sass/pages/_featuredPets.scss
+++ b/sass/pages/_featuredPets.scss
@@ -26,6 +26,7 @@
   }
 
   &__adoption-link {
+    justify-self: center;
     margin-top: 3.6rem;
     color: $color-secondary-dark;
     font-size: $font-mobile-body-10;
