--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -34,4 +34,5 @@ $color-black: #000;
 // Breakpoints
 $breakpoint-tablet: 768px;
 $breakpoint-desktop: 1024px;
+$breakpoint-semi-big-desktop: 1400px;
 $breakpoint-big-desktop: 1600px;
