--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -43,3 +43,9 @@
   display: flex;
   flex-direction: row;
 }
+
+@mixin drop-shadow {
+  box-shadow: 0 4px 8px rgba(255, 129, 107, 0.3);
+  -webkit-box-shadow: 0 4px 8px rgba(255, 129, 107, 0.3);
+  -moz-box-shadow: 0 4px 8px rgba(255, 129, 107, 0.3);
+}
