--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,8 @@
 @import "layout/navigation";
 @import "pages/home";
 @import "pages/featuredPets";
+@import "pages/why-adopt";
+@import "components/adoptionCard";
 @import "components/petCard";
 @import "components/petCardSlider";
 @import "components/header";
