--- a/sass/pages/_featuredPets.scss
+++ b/sass/pages/_featuredPets.scss
@@ -57,5 +57,9 @@
       font-size: $font-desktop-body-24;
       width: auto;
     }
+
+    &__adoption-link {
+      font-size: $font-desktop-body-20;
+    }
   }
 }
