--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "pages/home";
 @import "pages/featuredPets";
 @import "pages/why-adopt";
+@import "components/banner";
 @import "components/adoptionCard";
 @import "components/petCard";
 @import "components/petCardSlider";
