--- a/sass/components/_adoptionCard.scss
+++ b/sass/components/_adoptionCard.scss
@@ -42,7 +42,7 @@
   .adoption-cards {
     flex-direction: row;
     gap: 5rem;
-    margin-top: 2.4rem;
+    margin-bottom: 8rem;
 
     &__card {
       width: 30.2rem;
