--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -36,3 +36,6 @@ $breakpoint-tablet: 768px;
 $breakpoint-desktop: 1024px;
 $breakpoint-semi-big-desktop: 1400px;
 $breakpoint-big-desktop: 1600px;
+
+// Fix breakpoints
+$breakpoint-fix-1051: 1051px;
