--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,8 @@
 @import "pages/home";
 @import "pages/featuredPets";
 @import "pages/why-adopt";
+@import "pages/accordionSession";
+@import "components/accordion";
 @import "components/banner";
 @import "components/adoptionCard";
 @import "components/petCard";
