--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: auto;
   margin-top: 3.5rem;
+  margin-bottom: 5rem;
   background-image: linear-gradient(to bottom, #2e1559 0%, #ff816b 100%);
   @include flex-column;
   align-items: center;
